# thechosen-downloader

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.en.md  README.md  TheChosenDownloader-Full.spec  TheChosenDownloader-GUI.spec  TheChosenDownloader.spec  pyproject.toml  release.sh  run_gui.sh  season1.json  setup.py
docs/: BUILD.md  gui-spec.md  how_to_build_app_and_dmg.md  py2app_plan.md  pyinstaller_plan.md
src/thechosen_downloader/: __init__.py  cache.py  cli.py  downloader.py  extractor.py  gui.py  preprocessor.py
tests/: test_automatic_cache.py  test_gui_scroll.py  test_quality_selection.py  test_video_url.py
tests/features/: quality_selection.feature
