[project]
name = "thechosen-downloader"
version = "0.1.0"
description = "Download episodes from The Chosen streaming platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
thechosen-downloader = "thechosen_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thechosen_downloader"]
